스크롤 할 시 nav fixed로 변경 완료

--- a/index.html
+++ b/index.html
@@ -6,14 +6,31 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>index</title>
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <div class="container">
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
+  <!-- 포트폴리오 프로젝트 구성
+    1. 포트폴리오 사이트 자체(바닐라JS -> React)
+    2. 팀 프로젝트
+    3. 개인 토이 프로젝트
+    4. vingle 프로젝트 수정
+   -->
+  <div class="outer">
+    <div class="inner">
+      <div class="main">
+        <img src="images/어피치.jpg" alt="" class="logo">
+        <p>이거슨 테스트 버전! 그래서 어떤 그림이 나올랑가?
+          <br>두번째 줄이랑께 쓰기 귀찮스
+          <br>어제 저녁부터 배곱</p>
+        <div class="link">
+          <a href="https://github.com/GDana" target="_blank" class="m-link">git</a>
+          <a href="https://medium.com/gdana" target="_blank" class="m-link">blog</a>
+          <a href="mailto:danmi2857@naver.com" target="_blank" class="m-link">email</a>
+        </div>
+        <button><a href="portfolio.html">PORTFOLIO</a></button>
+      </div>      
+    </div>
   </div>
 </body>
 </html>
