--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
   <title>portfolio.html</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="portfolio.css">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Gothic+A1&display=swap" rel="stylesheet"> -->
   <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
@@ -16,62 +17,68 @@
   <div class="outer">
     <header>
       <h1 class="logo">GDANA</h1>
+      <h2>Portfolio</h2>
+      <div class="line_portfolio"></div>
       <p>여기는 프로젝트1, 프로젝트2.. 가 들어갈 예정<br>
       빨리빨리 채워보리쟈아아아아</p>
     </header>
     <div class="inner">
       <div class="main">
         <div class="item img #pj01 scroll">
-          <img src="images/cat(3).jpg" alt="cat(3)" width="600px" height="350px">
+          <img src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
         </div>
-        <div class="item info">
-          <h2>포트폴리오 사이트</h2>
+        <div class="item info_left">
+          <h3>포트폴리오 사이트</h3>
+          <div class="line_item01"></div>
           <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
           <ul>
-            <li>프로젝트 기간</li>
-            <li>2020.01.23 ~ 2020.01.27</li>
-            <li>기술 스택</li>
-            <li>Javascript, Java, Spring</li>
+            <li class="bold">프로젝트 기간</li>
+            <li class="none_letter">2020.01.23 ~ 2020.01.27</li>
+            <li class="bold">기술 스택</li>
+            <li class="none_letter">Javascript, Java, Spring</li>
           </ul>
         </div>
-        <div class="item info #pj02 scroll" id="test">
-          <h2>팀 프로젝트</h2>
+        <div class="item info_right #pj02" id="test">
+          <h3>팀 프로젝트</h3>
+          <div class="line_item02"></div>
           <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
           <ul>
-            <li>프로젝트 기간</li>
-            <li>2020.01.23 ~ 2020.01.27</li>
-            <li>기술 스택</li>
-            <li>Javascript, Java, Spring</li>
+            <li class="bold">프로젝트 기간</li>
+            <li class="none_letter">2020.01.23 ~ 2020.01.27</li>
+            <li class="bold">기술 스택</li>
+            <li class="none_letter">Javascript, Java, Spring</li>
           </ul>
         </div>
-        <div class="item img">
-          <img src="images/cat(3).jpg" alt="cat(3)" width="600px" height="350px">
+        <div class="item img scroll">
+          <img src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
         </div>
         <div class="item img #pj03 scroll">
-          <img src="images/cat(3).jpg" alt="cat(3)" width="600px" height="350px">
+          <img src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
         </div>
-        <div class="item info">
-          <h2>개인 프로젝트(1)</h2>
+        <div class="item info_left">
+          <h3>개인 프로젝트(1)</h3>
+          <div class="line_item03"></div>
           <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
           <ul>
-            <li>프로젝트 기간</li>
-            <li>2020.01.23 ~ 2020.01.27</li>
-            <li>기술 스택</li>
-            <li>Javascript, Java, Spring</li>
+            <li class="bold">프로젝트 기간</li>
+            <li class="none_letter">2020.01.23 ~ 2020.01.27</li>
+            <li class="bold">기술 스택</li>
+            <li class="none_letter">Javascript, Java, Spring</li>
           </ul>
         </div>
-        <div class="item info #pj04 scroll">
-          <h2>개인 프로젝트(2)</h2>
+        <div class="item info_right #pj04 ">
+          <h3>개인 프로젝트(2)</h3>
+          <div class="line_item04"></div>
           <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
           <ul>
-            <li>프로젝트 기간</li>
-            <li>2020.01.23 ~ 2020.01.27</li>
-            <li>기술 스택</li>
-            <li>Javascript, Java, Spring</li>
+            <li class="bold">프로젝트 기간</li>
+            <li class="none_letter">2020.01.23 ~ 2020.01.27</li>
+            <li class="bold">기술 스택</li>
+            <li class="none_letter">Javascript, Java, Spring</li>
           </ul>
         </div>
-        <div class="item img">
-          <img src="images/cat(3).jpg" alt="cat(3)" width="600px" height="350px">
+        <div class="item img scroll">
+          <img src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
         </div>
       </div>
       <nav>
@@ -81,8 +88,23 @@
           <li class="m"><a href="#pj03" class="menu03">개인 프로젝트(1)</a></li>
           <li class="m"><a href="#pj04" class="menu04">개인 프로젝트(2)</a></li>
         </ul>
-        <div><a href="index.htmlpj01"><img src="" alt="main"></a></div>
+        <div>
+          <a href="index.html" class="menu05_main">메인
+            <!-- <img src="" alt="main"> -->
+          </a>
+        </div>
+
       </nav>
+      <footer>
+        <div class="line"></div>
+         <!-- <ul>
+           <li>about</li>
+           <li>git</li>
+           <li>blog</li>
+           <li>email</li>
+         </ul> -->
+         <p><i>Dev by &#10084; dana</i></p>
+      </footer>
     </div>
   </div>
   <script src="script.js"></script>
