메인 깃,블로그,이메일 작업중

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>portfolio.html</title>
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="portfolio.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/portfolio.css">
   <!-- <link href="https://fonts.googleapis.com/css?family=Gothic+A1&display=swap" rel="stylesheet"> -->
   <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -16,7 +16,7 @@
 <body>
   <div class="outer">
     <header>
-      <h1 class="logo">GDANA</h1>
+      <!-- <h1>GDANA</h1> -->
       <h2>Portfolio</h2>
       <div class="line_portfolio"></div>
       <p>여기는 프로젝트1, 프로젝트2.. 가 들어갈 예정<br>
@@ -107,6 +107,6 @@
       </footer>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
