미디어쿼리 작업중

--- a/src/index.html
+++ b/src/index.html
@@ -10,33 +10,35 @@
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-  <div class="outer">
+<div class="wrapper">
+  <section>
+    <div class="logo"></div>
+    <!-- <div class="line_portfolio"></div>
+     -->
     <header>
-        <h1>GDANA</h1>
+      <h1>GDANA</h1>  
+      <p>'적자생존, 적는 사람이 생존한다'</p>
     </header>
-    <div class="inner">
-      <div class="main">
-        <div class="logo">
-          <!-- <img src="images/profile03.jpg" alt=""> -->
-        </div>
-        <p>이거슨 테스트 버전! 그래서 어떤 그림이 나올랑가?
-          <br>두번째 줄이랑께 쓰기 귀찮스
-          <br>어제 저녁부터 배곱</p>
-        <div class="link">
-          <a href="https://github.com/GDana" target="_blank" class="link_grid">
-            <span class="link_git">git</span>
-            <!-- <span class="link_git"></span> -->
-          </a>
-          <a href="https://medium.com/gdana" target="_blank" class="link_grid">
-            <span class="link_blog">blog</span>
-          </a>
-          <a href="mailto:danmi2857@naver.com" target="_blank" class="link_grid">
-            <span class="link_email">email</span>
-          </a>
-        </div>
-        <button><a href="portfolio.html">PORTFOLIO</a></button>
-      </div>      
-    </div>
-  </div>
+    <p>이거슨 테스트 버전! 그래서 어떤 그림이 나올랑가?
+      <br>두번째 줄이랑께 쓰기 귀찮스
+      <br>어제 저녁부터 배곱
+    </p>
+    <button><a href="portfolio.html">PORTFOLIO</a></button>
+    <ul>
+      <li>
+        <a href="https://github.com/GDana" target="_blank" class="link-grid">GIT
+          <!-- <img src="images/github.png" alt="git" width="22px" height="22px"> -->
+        </a></li>
+      <li>
+        <a href="https://medium.com/gdana" target="_blank" class="link-grid">BLOG
+          <!-- <img src="images/blog03.png" alt="git" width="22px" height="22px"> -->
+        </a></li>
+      <li>
+        <a href="mailto:danmi2857@naver.com" target="_blank" class="link-grid">EMAIL
+          <!-- <img src="images/email.png" alt="git" width="22px" height="22px"> -->
+        </a></li>
+    </ul>
+  </section>
+</div>
 </body>
 </html>
