--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -14,99 +14,97 @@
   crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="outer">
-    <header>
-      <!-- <h1>GDANA</h1> -->
-      <h2>Portfolio</h2>
-      <div class="line_portfolio"></div>
-      <p>여기는 프로젝트1, 프로젝트2.. 가 들어갈 예정<br>
-      빨리빨리 채워보리쟈아아아아</p>
-    </header>
-    <div class="inner">
-      <div class="main">
-        <div class="item img #pj01 scroll">
-          <img src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
-        </div>
-        <div class="item info_left">
-          <h3>포트폴리오 사이트</h3>
-          <div class="line_item01"></div>
-          <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
-          <ul>
-            <li class="bold">프로젝트 기간</li>
-            <li class="none_letter">2020.01.23 ~ 2020.01.27</li>
-            <li class="bold">기술 스택</li>
-            <li class="none_letter">Javascript, Java, Spring</li>
-          </ul>
-        </div>
-        <div class="item info_right #pj02" id="test">
-          <h3>팀 프로젝트</h3>
-          <div class="line_item02"></div>
-          <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
-          <ul>
-            <li class="bold">프로젝트 기간</li>
-            <li class="none_letter">2020.01.23 ~ 2020.01.27</li>
-            <li class="bold">기술 스택</li>
-            <li class="none_letter">Javascript, Java, Spring</li>
-          </ul>
-        </div>
-        <div class="item img scroll">
-          <img src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
-        </div>
-        <div class="item img #pj03 scroll">
-          <img src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
-        </div>
-        <div class="item info_left">
-          <h3>개인 프로젝트(1)</h3>
-          <div class="line_item03"></div>
-          <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
-          <ul>
-            <li class="bold">프로젝트 기간</li>
-            <li class="none_letter">2020.01.23 ~ 2020.01.27</li>
-            <li class="bold">기술 스택</li>
-            <li class="none_letter">Javascript, Java, Spring</li>
-          </ul>
-        </div>
-        <div class="item info_right #pj04 ">
-          <h3>개인 프로젝트(2)</h3>
-          <div class="line_item04"></div>
-          <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
-          <ul>
-            <li class="bold">프로젝트 기간</li>
-            <li class="none_letter">2020.01.23 ~ 2020.01.27</li>
-            <li class="bold">기술 스택</li>
-            <li class="none_letter">Javascript, Java, Spring</li>
-          </ul>
-        </div>
-        <div class="item img scroll">
-          <img src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
-        </div>
+<div class="wrapper">
+  <header>
+    <h2>Portfolio</h2>
+    <div class="line_portfolio"></div>
+    <p>여기는 프로젝트1, 프로젝트2.. 가 들어갈 예정<br>
+    빨리빨리 채워보리쟈아아아아</p>
+  </header>
+  <section>
+    <div class="box-conts">
+      <div class="item scroll #pj01">
+        <img src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
       </div>
-      <nav>
+      <div class="item info_right">
+        <h3>포트폴리오 사이트</h3>
+        <div class="line_item01"></div>
+        <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
         <ul>
-          <li class="m"><a href="#pj01" class="menu01">포트폴리오 사이트</a></li>
-          <li class="m"><a href="#pj02" class="menu02">팀 프로젝트</a></li>
-          <li class="m"><a href="#pj03" class="menu03">개인 프로젝트(1)</a></li>
-          <li class="m"><a href="#pj04" class="menu04">개인 프로젝트(2)</a></li>
+          <li class="bold">프로젝트 기간</li>
+          <li class="none_letter">2020.01.23 ~ 2020.01.27</li>
+          <li class="bold">기술 스택</li>
+          <li class="none_letter">Javascript, Java, Spring</li>
         </ul>
-        <div>
-          <a href="index.html" class="menu05_main">메인
-            <!-- <img src="" alt="main"> -->
-          </a>
-        </div>
-
-      </nav>
-      <footer>
-        <div class="line"></div>
-         <!-- <ul>
-           <li>about</li>
-           <li>git</li>
-           <li>blog</li>
-           <li>email</li>
-         </ul> -->
-         <p><i>Dev by &#10084; dana</i></p>
-      </footer>
+      </div>
+      <div class="item info_left">
+        <h3>팀 프로젝트</h3>
+        <div class="line_item02"></div>
+        <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
+        <ul>
+          <li class="bold">프로젝트 기간</li>
+          <li class="none_letter">2020.01.23 ~ 2020.01.27</li>
+          <li class="bold">기술 스택</li>
+          <li class="none_letter">Javascript, Java, Spring</li>
+        </ul>
+      </div>
+      <div class="item scroll #pj02">
+        <img src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
+      </div>
+      <div class="item scroll #pj03">
+        <img src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
+      </div>
+      <div class="item info_right">
+        <h3>개인 프로젝트(1)</h3>
+        <div class="line_item03"></div>
+        <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
+        <ul>
+          <li class="bold">프로젝트 기간</li>
+          <li class="none_letter">2020.01.23 ~ 2020.01.27</li>
+          <li class="bold">기술 스택</li>
+          <li class="none_letter">Javascript, Java, Spring</li>
+        </ul>
+      </div>
+      <div class="item info_left">
+        <h3>개인 프로젝트(2)</h3>
+        <div class="line_item04"></div>
+        <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
+        <ul>
+          <li class="bold">프로젝트 기간</li>
+          <li class="none_letter">2020.01.23 ~ 2020.01.27</li>
+          <li class="bold">기술 스택</li>
+          <li class="none_letter">Javascript, Java, Spring</li>
+        </ul>
+      </div>
+      <div class="item scroll #pj04">
+        <img src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
+      </div>
     </div>
-  </div>
+    <nav class="navi">
+      <ul>
+        <li class="m"><a href="#pj01" class="menu01">포트폴리오 사이트</a></li>
+        <li class="m"><a href="#pj02" class="menu02">팀 프로젝트</a></li>
+        <li class="m"><a href="#pj03" class="menu03">개인 프로젝트(1)</a></li>
+        <li class="m"><a href="#pj04" class="menu04">개인 프로젝트(2)</a></li>
+      </ul>
+      <div class="btn-main">
+        <a href="index.html" class="menu05_main">메인
+          <!-- <img src="" alt="main"> -->
+        </a>
+      </div>
+    </nav>
+    <footer>
+      <div class="line"></div>
+        <!-- <ul>
+          <li>about</li>
+          <li>git</li>
+          <li>blog</li>
+          <li>email</li>
+        </ul> -->
+        <p><i>Dev by &#10084; dana</i></p>
+    </footer>
+  </section>
+</div>
   <script src="js/script.js"></script>
 </body>
 </html>
