포트폴리오 이미지 레이어 팝업 완료

--- a/src/index.html
+++ b/src/index.html
@@ -25,18 +25,10 @@
     </p>
     <button><a href="portfolio.html">PORTFOLIO</a></button>
     <ul>
-      <li>
-        <a href="https://github.com/GDana" target="_blank" class="link-grid">GIT
-          <!-- <img src="images/github.png" alt="git" width="22px" height="22px"> -->
-        </a></li>
-      <li>
-        <a href="https://medium.com/gdana" target="_blank" class="link-grid">BLOG
-          <!-- <img src="images/blog03.png" alt="git" width="22px" height="22px"> -->
-        </a></li>
-      <li>
-        <a href="mailto:danmi2857@naver.com" target="_blank" class="link-grid">EMAIL
-          <!-- <img src="images/email.png" alt="git" width="22px" height="22px"> -->
-        </a></li>
+      <li><a href="https://github.com/GDana" target="_blank" class="link-grid">GIT</a></li>
+      <li><a href="https://medium.com/gdana" target="_blank" class="link-grid">BLOG</a></li>
+      <!-- <li><a href="mailto:danmi2857@naver.com" target="_blank" class="link-grid">EMAIL</a></li> -->
+      <li><a href="board.html" target="" class="link-grid">BOARD</a></li>
     </ul>
   </section>
 </div>
