--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -18,93 +18,118 @@
   <header>
     <h2>Portfolio</h2>
     <div class="line_portfolio"></div>
-    <p>여기는 프로젝트1, 프로젝트2.. 가 들어갈 예정<br>
-    빨리빨리 채워보리쟈아아아아</p>
+    <p>개인 프로젝트 혹은 팀 프로젝트를<br>
+      진행했던 작업물들입니다</p>
   </header>
   <section>
-    <div class="box-conts">
-      <div class="item scroll #pj01">
-        <img src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
-      </div>
-      <div class="item info_right">
-        <h3>포트폴리오 사이트</h3>
-        <div class="line_item01"></div>
-        <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
-        <ul>
-          <li class="bold">프로젝트 기간</li>
-          <li class="none_letter">2020.01.23 ~ 2020.01.27</li>
-          <li class="bold">기술 스택</li>
-          <li class="none_letter">Javascript, Java, Spring</li>
-        </ul>
-      </div>
-      <div class="item info_left">
-        <h3>팀 프로젝트</h3>
-        <div class="line_item02"></div>
-        <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
-        <ul>
-          <li class="bold">프로젝트 기간</li>
-          <li class="none_letter">2020.01.23 ~ 2020.01.27</li>
-          <li class="bold">기술 스택</li>
-          <li class="none_letter">Javascript, Java, Spring</li>
-        </ul>
-      </div>
-      <div class="item scroll #pj02">
-        <img src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
-      </div>
-      <div class="item scroll #pj03">
-        <img src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
-      </div>
-      <div class="item info_right">
-        <h3>개인 프로젝트(1)</h3>
-        <div class="line_item03"></div>
-        <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
-        <ul>
-          <li class="bold">프로젝트 기간</li>
-          <li class="none_letter">2020.01.23 ~ 2020.01.27</li>
-          <li class="bold">기술 스택</li>
-          <li class="none_letter">Javascript, Java, Spring</li>
-        </ul>
-      </div>
-      <div class="item info_left">
-        <h3>개인 프로젝트(2)</h3>
-        <div class="line_item04"></div>
-        <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
-        <ul>
-          <li class="bold">프로젝트 기간</li>
-          <li class="none_letter">2020.01.23 ~ 2020.01.27</li>
-          <li class="bold">기술 스택</li>
-          <li class="none_letter">Javascript, Java, Spring</li>
-        </ul>
-      </div>
-      <div class="item scroll #pj04">
-        <img src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
+    <div class="area-contents">
+      <div class="contents">
+        <div class="item scroll #pj01">
+            <img class="img item01" src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
+        </div>
+        <div class="item info_right">
+          <h3>포트폴리오 사이트
+            <a href="#"><img src="images/link.png" alt="link" width="20px" height="20px" class="link"></a>
+          </h3>
+          <div class="line_item01"></div>
+          <p>작업한 프로젝트들을 소개할 프로젝트용 사이트입니다.</p>
+          <ul>
+            <li class="font-bold">프로젝트 기간</li>
+            <li class="font-noletter">2019.01.23 ~ 2020.01.27</li>
+            <li class="font-bold">기술 스택</li>
+            <li class="font-noletter">HTML5, CSS3, Javascript, Java, Spring, JDBC, Maven</li>
+          </ul>
+        </div>
+        <div class="item info_left">
+          <h3>팀 프로젝트</h3>
+          <div class="line_item02"></div>
+          <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
+          <ul>
+            <li class="font-bold">프로젝트 기간</li>
+            <li class="font-noletter">2020.03.23 ~ 2020.06.03</li>
+            <li class="font-bold">기술 스택</li>
+            <li class="font-noletter">Javascript, Java, Spring</li>
+          </ul>
+        </div>
+        <div class="item scroll #pj02">
+          <img class="img item02" src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
+        </div>
+        <div class="item scroll #pj03">
+          <img class="img item03" src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
+        </div>
+        <div class="item info_right">
+          <h3>개인 프로젝트(1)</h3>
+          <div class="line_item03"></div>
+          <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
+          <ul>
+            <li class="font-bold">프로젝트 기간</li>
+            <li class="font-noletter">2020.01.23 ~ 2020.01.27</li>
+            <li class="font-bold">기술 스택</li>
+            <li class="font-noletter">Javascript, Java, Spring</li>
+          </ul>
+        </div>
+        <div class="item info_left">
+          <h3>개인 프로젝트(2)</h3>
+          <div class="line_item04"></div>
+          <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
+          <ul>
+            <li class="font-bold">프로젝트 기간</li>
+            <li class="font-noletter">2020.01.23 ~ 2020.01.27</li>
+            <li class="font-bold">기술 스택</li>
+            <li class="font-noletter">Javascript, Java, Spring</li>
+          </ul>
+        </div>
+        <div class="item scroll #pj04">
+          <img class="img item04" src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
+        </div>
       </div>
     </div>
-    <nav class="navi">
-      <ul>
-        <li class="m"><a href="#pj01" class="menu01">포트폴리오 사이트</a></li>
-        <li class="m"><a href="#pj02" class="menu02">팀 프로젝트</a></li>
-        <li class="m"><a href="#pj03" class="menu03">개인 프로젝트(1)</a></li>
-        <li class="m"><a href="#pj04" class="menu04">개인 프로젝트(2)</a></li>
-      </ul>
-      <div class="btn-main">
-        <a href="index.html" class="menu05_main">메인
-          <!-- <img src="" alt="main"> -->
-        </a>
+    <nav>
+      <div class="area-navi">
+        <ul>
+          <li class="m"><a href="#pj01" class="menu01">포트폴리오 사이트</a></li>
+          <li class="m"><a href="#pj02" class="menu02">팀 프로젝트</a></li>
+          <li class="m"><a href="#pj03" class="menu03">개인 프로젝트(1)</a></li>
+          <li class="m"><a href="#pj04" class="menu04">개인 프로젝트(2)</a></li>
+        </ul>
+        <div class="btn-goTomain">
+          <a href="index.html" class="menu05_main">메인
+          </a>
+        </div>
       </div>
     </nav>
-    <footer>
-      <div class="line"></div>
-        <!-- <ul>
-          <li>about</li>
-          <li>git</li>
-          <li>blog</li>
-          <li>email</li>
-        </ul> -->
-        <p><i>Dev by &#10084; dana</i></p>
-    </footer>
   </section>
+  <footer>
+
+    <div class="line"></div>
+      <!-- <ul>
+        <li>about</li>
+        <li>git</li>
+        <li>blog</li>
+        <li>email</li>
+      </ul> -->
+      <p><i>Dev by &#10084; dana</i></p>
+  </footer>
+  <div class="area-popup">
+    <div class="popup-item01 popup">
+      <h3>itme01</h3>
+      <p>이미지만 들어올 예정</p>
+    </div>
+    <div class="popup-item02 popup">
+      <h3>itme02</h3>
+      <p>이미지만 들어올 예정</p>
+    </div>
+    <div class="popup-item03 popup">
+      <h3>itme03</h3>
+      <p>이미지만 들어올 예정</p>
+    </div>
+    <div class="popup-item04 popup">
+      <h3>itme04</h3>
+      <p>이미지만 들어올 예정</p>
+    </div>
+  </div>
 </div>
   <script src="js/script.js"></script>
+  <script src="js/scroll.js"></script>
 </body>
 </html>
