레이어 팝업 close 버튼 이미지 수정 전

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -7,7 +7,8 @@
   <title>portfolio.html</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/portfolio.css">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Gothic+A1&display=swap" rel="stylesheet"> -->
+  <link rel="stylesheet" href="css/slider.css">
+
   <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
@@ -28,7 +29,7 @@
             <img class="img item01" src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
         </div>
         <div class="item info_right">
-          <h3>포트폴리오 사이트
+          <h3>개인 프로젝트(1)
             <a href="#"><img src="images/link.png" alt="link" width="20px" height="20px" class="link"></a>
           </h3>
           <div class="line_item01"></div>
@@ -41,56 +42,58 @@
           </ul>
         </div>
         <div class="item info_left">
-          <h3>팀 프로젝트</h3>
+          <h3><a href="#"><img src="images/link.png" alt="link" width="20px" height="20px" class="link"></a> 팀 프로젝트(1)</h3>
           <div class="line_item02"></div>
-          <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
+          <p>국비과정에서 5명이 한팀을 이루어 작업한 서비스입니다.</p>
           <ul>
             <li class="font-bold">프로젝트 기간</li>
             <li class="font-noletter">2020.03.23 ~ 2020.06.03</li>
             <li class="font-bold">기술 스택</li>
-            <li class="font-noletter">Javascript, Java, Spring</li>
+            <li class="font-noletter">Javascript, Java, Spring, SQL</li>
           </ul>
         </div>
         <div class="item scroll #pj02">
-          <img class="img item02" src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
+          <img class="img item02" src="images/cat(28).jpg" alt="cat(3)" width="600px" height="550px">
         </div>
         <div class="item scroll #pj03">
-          <img class="img item03" src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
+          <img class="img item03" src="images/cat(27).jpg" alt="cat(3)" width="600px" height="550px">
         </div>
         <div class="item info_right">
-          <h3>개인 프로젝트(1)</h3>
+          <h3>개인 프로젝트(2)
+            <a href="#"><img src="images/link.png" alt="link" width="20px" height="20px" class="link"></a>
+          </h3>
           <div class="line_item03"></div>
-          <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
+          <p>Vingle 서비스를 모방한 사이트로 리액트를 기반으로 만들었습니다.</p>
           <ul>
             <li class="font-bold">프로젝트 기간</li>
-            <li class="font-noletter">2020.01.23 ~ 2020.01.27</li>
+            <li class="font-noletter">2020.05.01 ~ 2020.05.31</li>
             <li class="font-bold">기술 스택</li>
-            <li class="font-noletter">Javascript, Java, Spring</li>
+            <li class="font-noletter">Javascript, React, Node.js, MongoDB</li>
           </ul>
         </div>
         <div class="item info_left">
-          <h3>개인 프로젝트(2)</h3>
+          <h3><a href="#"><img src="images/link.png" alt="link" width="20px" height="20px" class="link"></a> 팀 프로젝트(2)</h3>
           <div class="line_item04"></div>
-          <p>간략한 설명이 들어갑니동???? 어떤 설명을 넣어드릴까?</p>
+          <p>인천, 부천 사는 웹개발자들 커뮤니티에서 수익을 위한 서비스를 개발한 사이트입니다.</p>
           <ul>
             <li class="font-bold">프로젝트 기간</li>
-            <li class="font-noletter">2020.01.23 ~ 2020.01.27</li>
+            <li class="font-noletter">2020.01.19 ~ 2020.04.30</li>
             <li class="font-bold">기술 스택</li>
             <li class="font-noletter">Javascript, Java, Spring</li>
           </ul>
         </div>
         <div class="item scroll #pj04">
-          <img class="img item04" src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
+          <img class="img item04" src="images/cat(11).jpg" alt="cat(3)" width="600px" height="550px">
         </div>
       </div>
     </div>
     <nav>
       <div class="area-navi">
         <ul>
-          <li class="m"><a href="#pj01" class="menu01">포트폴리오 사이트</a></li>
-          <li class="m"><a href="#pj02" class="menu02">팀 프로젝트</a></li>
-          <li class="m"><a href="#pj03" class="menu03">개인 프로젝트(1)</a></li>
-          <li class="m"><a href="#pj04" class="menu04">개인 프로젝트(2)</a></li>
+          <li class="m"><a href="#pj01" class="menu01">개인 프로젝트(1)</a></li>
+          <li class="m"><a href="#pj02" class="menu02">팀 프로젝트(2)</a></li>
+          <li class="m"><a href="#pj03" class="menu03">개인 프로젝트(2)</a></li>
+          <li class="m"><a href="#pj04" class="menu04">팀 프로젝트(2)</a></li>
         </ul>
         <div class="btn-goTomain">
           <a href="index.html" class="menu05_main">메인
@@ -100,7 +103,6 @@
     </nav>
   </section>
   <footer>
-
     <div class="line"></div>
       <!-- <ul>
         <li>about</li>
@@ -111,13 +113,41 @@
       <p><i>Dev by &#10084; dana</i></p>
   </footer>
   <div class="area-popup">
+    <div class="closeBtn"></div>
     <div class="popup-item01 popup">
       <h3>itme01</h3>
       <p>이미지만 들어올 예정</p>
     </div>
     <div class="popup-item02 popup">
-      <h3>itme02</h3>
-      <p>이미지만 들어올 예정</p>
+      <!-- <h3>itme02</h3> -->
+      <div id="wrapper">
+        <div id="slider-wrap">
+          <ul id="slider">
+            <li data-color="#1abc9c">
+              <img src="images/cat(28).jpg">
+            </li>
+            <li data-color="#3498db">
+              <img src="images/cat(27).jpg">
+            </li>
+            <li data-color="#9b59b6">
+              <img src="images/cat(16).jpg">
+            </li>
+            <li data-color="#34495e">
+              <img src="images/cat(11).jpg">
+            </li>
+            <li data-color="#e74c3c">
+              <img src="images/cat(3).jpg">
+            </li>
+          </ul>
+    
+          <!--controls-->
+          <div class="btns" id="next"><i class="fa fa-arrow-right"></i></div>
+          <div class="btns" id="previous"><i class="fa fa-arrow-left"></i></div>
+          <div id="counter"></div>
+          <div id="pagination-wrap"><ul></ul></div>
+          <!--controls-->
+        </div>
+      </div>
     </div>
     <div class="popup-item03 popup">
       <h3>itme03</h3>
@@ -131,5 +161,6 @@
 </div>
   <script src="js/script.js"></script>
   <script src="js/scroll.js"></script>
+  <script src="js/slider.js"></script>
 </body>
 </html>
