호스팅 테스트

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -63,7 +63,7 @@
             <a href="#"><img src="images/link.png" alt="link" width="20px" height="20px" class="link"></a>
           </h3>
           <div class="line_item03"></div>
-          <p>Vingle 서비스를 모방한 사이트로 리액트를 기반으로 만들었습니다.</p>
+          <p><span class="font-en">Vingle</span> 서비스를 모방한 사이트로 리액트를 기반으로 만들었습니다.</p>
           <ul>
             <li class="font-bold">프로젝트 기간</li>
             <li class="font-noletter">2020.05.01 ~ 2020.05.31</li>
@@ -96,7 +96,7 @@
           <li class="m"><a href="#pj04" class="menu04">팀 프로젝트(2)</a></li>
         </ul>
         <div class="btn-goTomain">
-          <a href="index.html" class="menu05_main">메인
+          <a href="../index.html" class="menu05_main">메인
           </a>
         </div>
       </div>
