호스팅 테스트, html 루트로 뺌

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
       <br>두번째 줄이랑께 쓰기 귀찮스
       <br>어제 저녁부터 배곱
     </p>
-    <button><a href="src/portfolio.html">PORTFOLIO</a></button>
+    <button><a href="portfolio.html">PORTFOLIO</a></button>
     <ul>
       <li><a href="https://github.com/GDana" target="_blank" class="link-grid">GIT</a></li>
       <li><a href="https://medium.com/gdana" target="_blank" class="link-grid">BLOG</a></li>
       <!-- <li><a href="mailto:danmi2857@naver.com" target="_blank" class="link-grid">EMAIL</a></li> -->
-      <li><a href="src/board.html" target="" class="link-grid">BOARD</a></li>
+      <li><a href="board.html" target="" class="link-grid">BOARD</a></li>
     </ul>
   </section>
 </div>
