--- a/portfolio.html
+++ b/portfolio.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>portfolio.html</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/portfolio.css">
-  <link rel="stylesheet" href="css/slider.css">
+  <link rel="stylesheet" href="src/css/reset.css">
+  <link rel="stylesheet" href="src/css/portfolio.css">
+  <link rel="stylesheet" href="src/css/slider.css">
 
   <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -26,11 +26,11 @@
     <div class="area-contents">
       <div class="contents">
         <div class="item scroll #pj01">
-            <img class="img item01" src="images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
+            <img class="img item01" src="src/images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
         </div>
         <div class="item info_right">
           <h3>개인 프로젝트(1)
-            <a href="#"><img src="images/link.png" alt="link" width="20px" height="20px" class="link"></a>
+            <a href="#"><img src="src/images/link.png" alt="link" width="20px" height="20px" class="link"></a>
           </h3>
           <div class="line_item01"></div>
           <p>작업한 프로젝트들을 소개할 프로젝트용 사이트입니다.</p>
@@ -42,7 +42,7 @@
           </ul>
         </div>
         <div class="item info_left">
-          <h3><a href="#"><img src="images/link.png" alt="link" width="20px" height="20px" class="link"></a> 팀 프로젝트(1)</h3>
+          <h3><a href="#"><img src="src/images/link.png" alt="link" width="20px" height="20px" class="link"></a> 팀 프로젝트(1)</h3>
           <div class="line_item02"></div>
           <p>국비과정에서 5명이 한팀을 이루어 작업한 서비스입니다.</p>
           <ul>
@@ -53,14 +53,14 @@
           </ul>
         </div>
         <div class="item scroll #pj02">
-          <img class="img item02" src="images/cat(28).jpg" alt="cat(3)" width="600px" height="550px">
+          <img class="img item02" src="src/images/cat(28).jpg" alt="cat(3)" width="600px" height="550px">
         </div>
         <div class="item scroll #pj03">
-          <img class="img item03" src="images/cat(27).jpg" alt="cat(3)" width="600px" height="550px">
+          <img class="img item03" src="src/images/cat(27).jpg" alt="cat(3)" width="600px" height="550px">
         </div>
         <div class="item info_right">
           <h3>개인 프로젝트(2)
-            <a href="#"><img src="images/link.png" alt="link" width="20px" height="20px" class="link"></a>
+            <a href="#"><img src="src/images/link.png" alt="link" width="20px" height="20px" class="link"></a>
           </h3>
           <div class="line_item03"></div>
           <p><span class="font-en">Vingle</span> 서비스를 모방한 사이트로 리액트를 기반으로 만들었습니다.</p>
@@ -72,7 +72,7 @@
           </ul>
         </div>
         <div class="item info_left">
-          <h3><a href="#"><img src="images/link.png" alt="link" width="20px" height="20px" class="link"></a> 팀 프로젝트(2)</h3>
+          <h3><a href="#"><img src="src/images/link.png" alt="link" width="20px" height="20px" class="link"></a> 팀 프로젝트(2)</h3>
           <div class="line_item04"></div>
           <p>인천, 부천 사는 웹개발자들 커뮤니티에서 수익을 위한 서비스를 개발한 사이트입니다.</p>
           <ul>
@@ -83,7 +83,7 @@
           </ul>
         </div>
         <div class="item scroll #pj04">
-          <img class="img item04" src="images/cat(11).jpg" alt="cat(3)" width="600px" height="550px">
+          <img class="img item04" src="src/images/cat(11).jpg" alt="cat(3)" width="600px" height="550px">
         </div>
       </div>
     </div>
@@ -96,7 +96,7 @@
           <li class="m"><a href="#pj04" class="menu04">팀 프로젝트(2)</a></li>
         </ul>
         <div class="btn-goTomain">
-          <a href="../index.html" class="menu05_main">메인
+          <a href="index.html" class="menu05_main">메인
           </a>
         </div>
       </div>
@@ -124,19 +124,19 @@
         <div id="slider-wrap">
           <ul id="slider">
             <li data-color="#1abc9c">
-              <img src="images/cat(28).jpg">
+              <img src="src/images/cat(28).jpg">
             </li>
             <li data-color="#3498db">
-              <img src="images/cat(27).jpg">
+              <img src="src/images/cat(27).jpg">
             </li>
             <li data-color="#9b59b6">
-              <img src="images/cat(16).jpg">
+              <img src="src/images/cat(16).jpg">
             </li>
             <li data-color="#34495e">
-              <img src="images/cat(11).jpg">
+              <img src="src/images/cat(11).jpg">
             </li>
             <li data-color="#e74c3c">
-              <img src="images/cat(3).jpg">
+              <img src="src/images/cat(3).jpg">
             </li>
           </ul>
     
@@ -159,8 +159,8 @@
     </div>
   </div>
 </div>
-  <script src="js/script.js"></script>
-  <script src="js/scroll.js"></script>
-  <script src="js/slider.js"></script>
+  <script src="src/js/script.js"></script>
+  <script src="src/js/scroll.js"></script>
+  <script src="src/js/slider.js"></script>
 </body>
 </html>
