반응형 완료

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,11 +8,17 @@
   <link rel="stylesheet" href="src/css/reset.css">
   <link rel="stylesheet" href="src/css/portfolio.css">
   <link rel="stylesheet" href="src/css/slider.css">
-
   <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
+
+  <style>
+    #wrapper{
+      margin: 0; 
+    }
+  </style>
+
 </head>
 <body>
 <div class="wrapper">
