레이어 팝업 및 샘플 이미지 삽입필요

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,27 +35,27 @@
             <img class="img item01" src="src/images/cat(3).jpg" alt="cat(3)" width="600px" height="550px">
         </div>
         <div class="item info_right">
-          <h3>개인 프로젝트(1)
+          <h3>개인 프로젝트<span class="font-en">(1)</span>
             <a href="#"><img src="src/images/link.png" alt="link" width="20px" height="20px" class="link"></a>
           </h3>
           <div class="line_item01"></div>
           <p>작업한 프로젝트들을 소개할 프로젝트용 사이트입니다.</p>
           <ul>
             <li class="font-bold">프로젝트 기간</li>
-            <li class="font-noletter">2019.01.23 ~ 2020.01.27</li>
+            <li class="font-noletter font-en">2019.01.23 ~ 2020.01.27</li>
             <li class="font-bold">기술 스택</li>
-            <li class="font-noletter">HTML5, CSS3, Javascript, Java, Spring, JDBC, Maven</li>
+            <li class="font-noletter font-en">HTML5, CSS3, Javascript, React</li>
           </ul>
         </div>
         <div class="item info_left">
-          <h3><a href="#"><img src="src/images/link.png" alt="link" width="20px" height="20px" class="link"></a> 팀 프로젝트(1)</h3>
+          <h3><a href="#"><img src="src/images/link.png" alt="link" width="20px" height="20px" class="link"></a> 팀 프로젝트<span class="font-en">(1)</span></h3>
           <div class="line_item02"></div>
           <p>국비과정에서 5명이 한팀을 이루어 작업한 서비스입니다.</p>
           <ul>
             <li class="font-bold">프로젝트 기간</li>
-            <li class="font-noletter">2020.03.23 ~ 2020.06.03</li>
+            <li class="font-noletter font-en">2020.03.23 ~ 2020.06.03</li>
             <li class="font-bold">기술 스택</li>
-            <li class="font-noletter">Javascript, Java, Spring, SQL</li>
+            <li class="font-noletter font-en">Javascript, Java, Spring, SQL</li>
           </ul>
         </div>
         <div class="item scroll #pj02">
@@ -65,27 +65,27 @@
           <img class="img item03" src="src/images/cat(27).jpg" alt="cat(3)" width="600px" height="550px">
         </div>
         <div class="item info_right">
-          <h3>개인 프로젝트(2)
+          <h3>개인 프로젝트<span class="font-en">(2)</span>
             <a href="#"><img src="src/images/link.png" alt="link" width="20px" height="20px" class="link"></a>
           </h3>
           <div class="line_item03"></div>
           <p><span class="font-en">Vingle</span> 서비스를 모방한 사이트로 리액트를 기반으로 만들었습니다.</p>
           <ul>
             <li class="font-bold">프로젝트 기간</li>
-            <li class="font-noletter">2020.05.01 ~ 2020.05.31</li>
+            <li class="font-noletter font-en">2020.05.01 ~ 2020.05.31</li>
             <li class="font-bold">기술 스택</li>
-            <li class="font-noletter">Javascript, React, Node.js, MongoDB</li>
+            <li class="font-noletter font-en">Javascript, React, Node.js, MongoDB</li>
           </ul>
         </div>
         <div class="item info_left">
-          <h3><a href="#"><img src="src/images/link.png" alt="link" width="20px" height="20px" class="link"></a> 팀 프로젝트(2)</h3>
+          <h3><a href="#"><img src="src/images/link.png" alt="link" width="20px" height="20px" class="link"></a> 팀 프로젝트<span class="font-en">(2)</span></h3>
           <div class="line_item04"></div>
           <p>인천, 부천 사는 웹개발자들 커뮤니티에서 수익을 위한 서비스를 개발한 사이트입니다.</p>
           <ul>
             <li class="font-bold">프로젝트 기간</li>
-            <li class="font-noletter">2020.01.19 ~ 2020.04.30</li>
+            <li class="font-noletter font-en">2020.01.19 ~ 2020.04.30</li>
             <li class="font-bold">기술 스택</li>
-            <li class="font-noletter">Javascript, Java, Spring</li>
+            <li class="font-noletter font-en">Javascript, Java, Spring</li>
           </ul>
         </div>
         <div class="item scroll #pj04">
@@ -96,14 +96,13 @@
     <nav>
       <div class="area-navi">
         <ul>
-          <li class="m"><a href="#pj01" class="menu01">개인 프로젝트(1)</a></li>
-          <li class="m"><a href="#pj02" class="menu02">팀 프로젝트(2)</a></li>
-          <li class="m"><a href="#pj03" class="menu03">개인 프로젝트(2)</a></li>
-          <li class="m"><a href="#pj04" class="menu04">팀 프로젝트(2)</a></li>
+          <li class="m"><a href="#pj01" class="menu01">개인 프로젝트<span class="font-en">(1)</span></a></li>
+          <li class="m"><a href="#pj02" class="menu02">팀 프로젝트<span class="font-en">(1)</span></a></li>
+          <li class="m"><a href="#pj03" class="menu03">개인 프로젝트<span class="font-en">(2)</span></a></li>
+          <li class="m"><a href="#pj04" class="menu04">팀 프로젝트<span class="font-en">(2)</span></a></li>
         </ul>
-        <div class="btn-goTomain">
-          <a href="index.html" class="menu05_main">메인
-          </a>
+        <div>
+          <button><a href="index.html" class="btn-goTomain">MAIN</a></button>
         </div>
       </div>
     </nav>
