--- a/board.html
+++ b/board.html
@@ -5,8 +5,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>board</title>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
+  <style>
+    a{
+      color: rgba(114,114,114,0.8);
+      text-decoration: none;
+    }
+
+    a:visited{
+      color: rgba(114,114,114,0.8);
+    }
+
+    .btn-goTomain button{
+      width: 150px;
+      height: 41px;
+      display: inline-block;
+      margin: 0 auto;
+      margin-top: 25px;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 500;
+      font-size: 16px;  
+      border: 1px solid rgba(114,114,114,0.4);
+      border-radius: 50px;
+      background-color: white;
+      cursor: pointer;
+    }
+
+    .btn-goTomain button:hover{
+      border: none;
+      background-color: #81665C;
+    }
+
+    .btn-goTomain button > a{
+      padding: 13px 20px;
+    }
+
+    .btn-goTomain button:hover a{
+      color: white;
+      font-weight: 600;
+    }
+  </style>
+
 </head>
 <body>
   <h2>게시판</h2>
+  <p>추후 만들 예정, 변경하게 될 시 EMAIL로 바뀔 예정</p>
+  <div class="btn-goTomain">
+    <button><a href="index.html">MAIN</a></button>
+  </div>
 </body>
 </html>
