--- a/index.html
+++ b/index.html
@@ -13,15 +13,12 @@
 <div class="wrapper">
   <section>
     <div class="logo"></div>
-    <!-- <div class="line_portfolio"></div>
-     -->
     <header>
       <h1>GDANA</h1>  
-      <p>'적자생존, 적는 사람이 생존한다'</p>
+      <!-- <p>'적자생존, 적는 사람이 생존한다'</p> -->
     </header>
-    <p>이거슨 테스트 버전! 그래서 어떤 그림이 나올랑가?
-      <br>두번째 줄이랑께 쓰기 귀찮스
-      <br>어제 저녁부터 배곱
+    <p>프론트 삐약이 현선이가 만든
+      <br>프로젝트 전용 사이트
     </p>
     <button><a href="portfolio.html">PORTFOLIO</a></button>
     <ul>
